# aoc

./: .env  .gitignore  .justfile  Cargo.toml  README.md
.git-crypt/keys/default/0/: 5D984818E38953F204D417EB2C43EFE526A75351.gpg  E23AB685DA03CF4068A29F5A2A1FFF336F3F2CF4.gpg
aoc2019/: .justfile  Cargo.toml  README.md
aoc2019/benches/: criterion.rs
aoc2019/src/: lib.rs  main.rs
aoc2019/src/day01/: mod.rs
aoc2019/src/day02/: mod.rs
aoc2019/src/day03/: mod.rs
aoc2019/src/day04/: mod.rs
aoc2019/src/day05/: mod.rs
aoc2019/src/day06/: mod.rs
aoc2019/src/intcode/: mod.rs
aoc2020/src/template/: mod.rs
aoc2021/: Cargo.toml
aoc2021/.cargo/: config.toml
aoc2021/benches/: criterion.rs
aoc2021/src/: main.rs
aoc2021/src/day01/: mod.rs
aoc2021/src/day03/: mod.rs
aoc2021/src/day04/: mod.rs
aoc2021/src/day07/: mod.rs
aoc2021/src/day09/: mod.rs
aoc2021/src/day13/: mod.rs
aoc2024/: .justfile  Cargo.toml  README.md
aoc2024/benches/: criterion.rs
aoc2024/src/: lib.rs  main.rs  parsers.rs
aoc2024/src/day01/: mod.rs
aoc2024/src/day02/: mod.rs
aoc2024/src/day03/: mod.rs
aoc2024/src/day04/: mod.rs
aoc2024/src/day05/: mod.rs
aoc2024/src/day06/: mod.rs
aoc2024/src/day07/: mod.rs
aoc2024/src/day08/: mod.rs
aoc2024/src/day09/: mod.rs
aoc2024/src/day10/: mod.rs
aoc2024/src/day11/: mod.rs
aoc2024/src/day12/: mod.rs
aoc2024/src/day13/: mod.rs
aoc2024/src/day14/: mod.rs
aoc2024/src/day15/: mod.rs
aoc2024/src/day16/: mod.rs
aoc2024/src/day17/: mod.rs
aoc2024/src/day18/: mod.rs
aoc2024/src/day19/: mod.rs
aoc2024/src/day20/: mod.rs
aoc2024/src/day21/: mod.rs
aoc2024/src/day22/: mod.rs
aoc2024/src/day23/: mod.rs
aoc2024/src/day24/: mod.rs
aoc2024/src/day25/: mod.rs
aoc2024/src/template/: mod.rs
benches/: criterion.rs
src/: lib.rs  main.rs  utils.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day16/: mod.rs
src/day17/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/template/: mod.rs
template/: .env  .justfile  Cargo.toml  README.md  cargo-generate.toml
template/benches/: criterion.rs
template/src/: errors.rs  lib.rs  main.rs  utils.rs
template/src/template/: mod.rs
utils/: Cargo.toml
utils/src/: errors.rs  graph.rs  lib.rs  macros.rs  math.rs  parse.rs  traits.rs  utils.rs
utils/src/collections/: bitset.rs  mod.rs  multimap.rs  multiset.rs
utils/src/math/: coord.rs
utils/src/utils/: file.rs
