[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
clap = "2.34.0"
fern = { version = "0.6.0", features = ["colored"] }
itertools = "0.10.1"
log = "0.4.14"
ndarray = "0.15.4"
nom = "7.1.0"
once_cell = "1.8.0"
rayon = "1.5.1"
serde = "1.0.130"
serde_derive = "1.0.130"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "criterion"
harness = false

[profile.release]
opt-level = 3
debug = true

[features]
day06_ring = []
