[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
clap = "2.34.0"
fern = { version = "0.6.0", features = ["colored"] }
fxhash = "0.2.1"
home = "0.5.3"
itertools = "0.10.1"
log = "0.4.14"
ndarray = "0.15.4"
nom = "7.1.0"
once_cell = "1.8.0"
petgraph = "0.6.0"
rayon = "1.5.1"
reqwest = { version ="0.11.7", features = ["blocking"] }
serde = "1.0.130"
serde_derive = "1.0.130"
tracing = "0.1.29"
tracing-flame = "0.1.0"
tracing-subscriber = "0.3.3"

[dev-dependencies]
criterion = "0.3.5"
pprof = { version = "0.6.1", features = ["flamegraph", "criterion"] }

[[bench]]
name = "criterion"
harness = false
required_features = ["disable_for_tests"]

[profile.release]
opt-level = 3
debug = 1
incremental = true

[profile.bench]
opt-level = 3
debug=true
lto = "thin"

[features]
day06_ring = []
disable_for_tests = []
