[package]
name = "aoc-utils"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4.17"
itertools = "0.13.0"
miette = { version = "7.4.0", features = ["fancy"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
heapless = "0.8.0"
winnow = "0.6.20"
dotenv = "0.15.0"
hashbrown = { version = "0.15.2", features = ["rayon", "serde"] }
allocator-api2 = "0.2.21"
rayon = "1.10.0"
bit-set = "0.8.0"
num = "0.4.3"
cached = "0.54.0"
trie-rs = "0.4.2"
