[package]
name = "aoc-utils"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
allocator-api2 = "0.2.21"
bit-set = "0.8.0"
cached = "0.54.0"
dotenv = "0.15.0"
hashbrown = { version = "0.15.2", features = ["rayon", "serde"] }
heapless = "0.8.0"
itertools = "0.13.0"
log = "0.4.17"
miette = { version = "7.4.0", features = ["fancy"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
num = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
thiserror = "2.0.3"
tracking-allocator = "0.4.0"
trie-rs = "0.4.2"
winnow = "0.6.20"
